--- a/yamaha-youth/assets/css/navbar.css
+++ b/yamaha-youth/assets/css/navbar.css
@@ -53,11 +53,15 @@
 }
 
 .dropdown-menu {
-  min-width: 0;
+  width: 250px;
+}
+.account-name {
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .dropdown-menu[data-bs-popper] {
-  top: 125%;
+  top: 200%;
   background-color: rgb(255, 255, 255, 0.3);
   border-radius: 20px;
   border: solid 1px #d1d5db;
@@ -67,6 +71,7 @@
   background-color: rgb(255, 255, 255, 0.3);
   border-radius: 20px;
   border: solid 1px #d1d5db;
+  top: 125%;
 }
 
 .dropdown-item {
@@ -80,9 +85,7 @@
 }
 .logout-button {
   background-color: #d33f44;
-  /* color: white;
-  padding: 8px 20px;
-  border-radius: 20px; */
+  top: 125%;
 }
 .login-button {
   background-color: #274d6e;
@@ -106,5 +109,25 @@
   .nav-item a {
     display: flex;
     justify-content: center;
+  }
+
+  .login-button {
+    width: 100%;
+  }
+
+  .dropdown {
+    display: flex;
+    flex-direction: column;
+  }
+  .account-desc {
+    display: block !important;
+  }
+
+  .dropdown-menu {
+    width: 100%;
+    position: relative;
+    background-color: rgb(255, 255, 255, 0.3);
+    border-radius: 20px;
+    border: solid 1px #d1d5db;
   }
 }
