--- a/festivalcreative-lps/src/css/navbar.css
+++ b/festivalcreative-lps/src/css/navbar.css
@@ -44,6 +44,7 @@ html {
 }
 
 .hamburger {
+  background: #f58634;
   display: none;
   cursor: pointer;
   border: solid 1px #e5e7eb;
@@ -57,7 +58,7 @@ html {
   margin: 5px auto;
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
-  background-color: #1f2937;
+  background-color: #ffffff;
 }
 
 @media (max-width: 992px) {
