--- a/festivalcreative-lps/src/scss/main.scss
+++ b/festivalcreative-lps/src/scss/main.scss
@@ -80,16 +80,16 @@ body {
                             }
                         }
                         .title {
-                            font-size: 36px;
+                            font-size: 20px;
                             color: #1C3C70;
                             font-family: "montserat-bold";
-                            line-height: 46px;
+                            // line-height: 46px;
                             margin-bottom: 15px !important;
                         }
 
                         .konten {
-                            font-size: 16px;
-                            line-height: 24px;
+                            font-size: 14px;
+                            line-height: 20px;
                             text-align: center;
                             font-family: "montserat-regular";
                             color: #292929;
