--- a/yamaha-youth/src/css/school.css
+++ b/yamaha-youth/src/css/school.css
@@ -1,3 +1,11 @@
+body {
+  height: 100vh;
+  background-image: url("../../assets/images/school-competition/bg-school.jpg");
+  background-position: top;
+  background-size: cover;
+  background-repeat: none;
+}
+
 #school-content {
-  margin-top: 120px;
+  margin-top: 180px;
 }
