--- a/yamaha-youth/assets/scss/school.scss
+++ b/yamaha-youth/assets/scss/school.scss
@@ -779,36 +779,280 @@ body {
 //medium
 
 @media (min-width: 768px) and (max-width: 991px) {
-  #wrap-kategori {
-    position: absolute;
-    top: 510px !important;
-    a {
-      text-decoration: none;
-      cursor: pointer;
-
-      .kategori {
-        font-size: 14px;
-        font-weight: 500;
-        background: #B4DBF5;
-        border-radius: 8px;
-        text-transform: uppercase;
-        color: #5180A2;
-        padding: 10px 10px;
-        margin: 10px 0;
+  #school-content {
+    margin-top: 120px;
+    margin-bottom: 120px;
+  
+    .section-container {
+      .wrap-content {
+        height: auto;
+  
+        .left-side {
+          position: relative;
+  
+          .destination {
+            position: absolute;
+            height: 80vh;
+            width: 100%;
+  
+            .wrap-destination {
+              height: 100%;
+              overflow-x: hidden;
+              overflow-y: auto;
+  
+              .latarkota {
+                position: relative;
+                height: 180px;
+  
+                img {
+                  border-radius: 20px;
+                  width: 100%;
+                  object-fit: cover;
+                  height: 300px;
+                }
+  
+                .wrap-desc {
+                  position: absolute;
+                  top: 110px;
+  
+                  .logo-wrap {
+                    img {
+                      max-width: 267px;
+                      height: unset;
+                      object-fit: unset;
+                    }
+                  }
+  
+                  .about-destination {
+                    margin-top: 30px;
+                    background: #B4DBF5;
+                    margin-left: 10px;
+                    margin-right: 10px;
+                    border-radius: 8px;
+                    padding: 12px;
+  
+                    .title {
+                      color: #5180A2;
+                      height: 100%;
+                      padding-top: 10px;
+                      padding-bottom: 2px;
+  
+                      h4 {
+                        font-size: 20px;
+                        font-family: "gill-sans-1000", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+                      }
+  
+                      .captions {
+                        background: #fff;
+                        margin: 10px;
+                        border-radius: 8px;
+                        margin: 10px 0;
+  
+                        p {
+                          font-size: 12px;
+                          line-height: normal;
+                          padding: 10px;
+                        }
+                      }
+                    }
+                  }
+  
+                  .share {}
+  
+                  .wrap-kategori {
+                    a {
+                      text-decoration: none;
+                      cursor: pointer;
+  
+                      .kategori {
+                        font-size: 14px;
+                        font-weight: 500;
+                        background: #B4DBF5;
+                        border-radius: 8px;
+                        text-transform: uppercase;
+                        color: #5180A2;
+                        padding: 10px 10px;
+                        margin: 10px 0;
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+  
+          // #destination.fixed {
+          //   position: fixed;
+          //   top: 0;
+          //   margin-top: 120px;
+          //   flex: 0 0 auto;
+          //   width: 33.33333333%;
+          //   display: flex;
+          //   max-width: 100%;
+          //   padding-right: calc(var(--bs-gutter-x) * .5);
+          //   padding-left: calc(var(--bs-gutter-x) * .5);
+          // }
+  
+        }
+  
+        #wrap-kategori {
+          position: absolute;
+          top: 510px;
+          width: 100%;
+          height: 100vh;
+          a {
+            text-decoration: none;
+            cursor: pointer;
+  
+            .kategori {
+              font-size: 14px;
+              font-weight: 500;
+              background: #B4DBF5;
+              border-radius: 8px;
+              text-transform: uppercase;
+              color: #5180A2;
+              padding: 10px 10px;
+              margin: 10px 0;
+            }
+          }
+        }
+  
+        #wrap-kategori.fixed{
+          position: fixed;
+          top: 0;
+          margin-top: 120px;
+          flex: 0 0 auto;
+          width: 28%;
+          display: flex;
+          max-width: 100%;
+          padding-right: calc(var(--bs-gutter-x) * .5);
+          padding-left: calc(var(--bs-gutter-x) * .5);
+        }
+  
+        .kategori-mobile{
+          .wrap-kategori-mobile {
+            overflow-x: auto;
+            white-space: nowrap;
+    
+            .box {
+              display: ruby;
+              float: none;
+    
+              a {
+                text-decoration: none;
+                cursor: pointer;
+    
+                .kategori {
+                  font-size: 14px;
+                  font-weight: 500;
+                  background: #B4DBF5;
+                  border-radius: 8px;
+                  text-transform: uppercase;
+                  color: #5180A2;
+                  padding: 10px 10px;
+                  margin: 10px 0;
+                }
+              }
+            }
+          }
+        }
+  
+        
+  
+        .content {
+          .wrap {
+            .title {
+              background: #5180A2;
+              color: #FFF;
+              padding: 10px 10px;
+              margin: 10px 0;
+              border-radius: 8px;
+              text-transform: uppercase;
+            }
+  
+            .slider-content-1 {
+              .swiper {
+                border-radius: 8px;
+                height: 322px;
+  
+                .swiper-wrapper {
+                  height: 361px;
+  
+                  .swiper-slide {
+                    img {
+                      width: 100%;
+                      object-fit: cover;
+                      height: auto;
+                    }
+                  }
+                }
+  
+                .swiper-button-next {}
+  
+                .swiper-button-prev {}
+  
+              }
+  
+              .swiper-pagination {
+                position: initial;
+                margin: 10px 0 30px 0;
+                height: 20px;
+                text-align: center;
+              }
+  
+              .swiper-pagination-2 {
+                position: initial;
+                margin: 10px 0 30px 0;
+                height: 20px;
+                text-align: center;
+              }
+  
+              .swiper-pagination-3 {
+                position: initial;
+                margin: 10px 0 30px 0;
+                height: 20px;
+                text-align: center;
+              }
+  
+              .swiper-pagination-4 {
+                position: initial;
+                margin: 10px 0 30px 0;
+                height: 20px;
+                text-align: center;
+              }
+  
+              .swiper-pagination-5 {
+                position: initial;
+                margin: 10px 0 30px 0;
+                height: 20px;
+                text-align: center;
+              }
+  
+              .swiper-pagination-6 {
+                position: initial;
+                margin: 10px 0 30px 0;
+                height: 20px;
+                text-align: center;
+              }
+  
+              .swiper-pagination-7 {
+                position: initial;
+                margin: 10px 0 30px 0;
+                height: 20px;
+                text-align: center;
+              }
+  
+              .swiper-pagination-8 {
+                position: initial;
+                margin: 10px 0 30px 0;
+                height: 20px;
+                text-align: center;
+              }
+            }
+          }
+        }
       }
     }
-  }
-
-  #wrap-kategori.fixed{
-    position: fixed;
-    top: 0;
-    margin-top: 120px;
-    flex: 0 0 auto;
-    width: 33.33333333%;
-    display: flex;
-    max-width: 100%;
-    padding-right: calc(var(--bs-gutter-x) * .5);
-    padding-left: calc(var(--bs-gutter-x) * .5);
   }
 }
 
