--- a/yamaha-youth/src/css/school.css
+++ b/yamaha-youth/src/css/school.css
@@ -582,15 +582,79 @@ body {
   }
 }
 @media (min-width: 768px) and (max-width: 991px) {
-  #wrap-kategori {
-    position: absolute;
-    top: 510px !important;
+  #school-content {
+    margin-top: 120px;
+    margin-bottom: 120px;
   }
-  #wrap-kategori a {
+  #school-content .section-container .wrap-content {
+    height: auto;
+  }
+  #school-content .section-container .wrap-content .left-side {
+    position: relative;
+  }
+  #school-content .section-container .wrap-content .left-side .destination {
+    position: absolute;
+    height: 80vh;
+    width: 100%;
+  }
+  #school-content .section-container .wrap-content .left-side .destination .wrap-destination {
+    height: 100%;
+    overflow-x: hidden;
+    overflow-y: auto;
+  }
+  #school-content .section-container .wrap-content .left-side .destination .wrap-destination .latarkota {
+    position: relative;
+    height: 180px;
+  }
+  #school-content .section-container .wrap-content .left-side .destination .wrap-destination .latarkota img {
+    border-radius: 20px;
+    width: 100%;
+    object-fit: cover;
+    height: 300px;
+  }
+  #school-content .section-container .wrap-content .left-side .destination .wrap-destination .latarkota .wrap-desc {
+    position: absolute;
+    top: 110px;
+  }
+  #school-content .section-container .wrap-content .left-side .destination .wrap-destination .latarkota .wrap-desc .logo-wrap img {
+    max-width: 267px;
+    height: unset;
+    object-fit: unset;
+  }
+  #school-content .section-container .wrap-content .left-side .destination .wrap-destination .latarkota .wrap-desc .about-destination {
+    margin-top: 30px;
+    background: #B4DBF5;
+    margin-left: 10px;
+    margin-right: 10px;
+    border-radius: 8px;
+    padding: 12px;
+  }
+  #school-content .section-container .wrap-content .left-side .destination .wrap-destination .latarkota .wrap-desc .about-destination .title {
+    color: #5180A2;
+    height: 100%;
+    padding-top: 10px;
+    padding-bottom: 2px;
+  }
+  #school-content .section-container .wrap-content .left-side .destination .wrap-destination .latarkota .wrap-desc .about-destination .title h4 {
+    font-size: 20px;
+    font-family: "gill-sans-1000", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  }
+  #school-content .section-container .wrap-content .left-side .destination .wrap-destination .latarkota .wrap-desc .about-destination .title .captions {
+    background: #fff;
+    margin: 10px;
+    border-radius: 8px;
+    margin: 10px 0;
+  }
+  #school-content .section-container .wrap-content .left-side .destination .wrap-destination .latarkota .wrap-desc .about-destination .title .captions p {
+    font-size: 12px;
+    line-height: normal;
+    padding: 10px;
+  }
+  #school-content .section-container .wrap-content .left-side .destination .wrap-destination .latarkota .wrap-desc .wrap-kategori a {
     text-decoration: none;
     cursor: pointer;
   }
-  #wrap-kategori a .kategori {
+  #school-content .section-container .wrap-content .left-side .destination .wrap-destination .latarkota .wrap-desc .wrap-kategori a .kategori {
     font-size: 14px;
     font-weight: 500;
     background: #B4DBF5;
@@ -600,15 +664,125 @@ body {
     padding: 10px 10px;
     margin: 10px 0;
   }
-  #wrap-kategori.fixed {
+  #school-content .section-container .wrap-content #wrap-kategori {
+    position: absolute;
+    top: 510px;
+    width: 100%;
+    height: 100vh;
+  }
+  #school-content .section-container .wrap-content #wrap-kategori a {
+    text-decoration: none;
+    cursor: pointer;
+  }
+  #school-content .section-container .wrap-content #wrap-kategori a .kategori {
+    font-size: 14px;
+    font-weight: 500;
+    background: #B4DBF5;
+    border-radius: 8px;
+    text-transform: uppercase;
+    color: #5180A2;
+    padding: 10px 10px;
+    margin: 10px 0;
+  }
+  #school-content .section-container .wrap-content #wrap-kategori.fixed {
     position: fixed;
     top: 0;
     margin-top: 120px;
     flex: 0 0 auto;
-    width: 33.33333333%;
+    width: 28%;
     display: flex;
     max-width: 100%;
     padding-right: calc(var(--bs-gutter-x) * 0.5);
     padding-left: calc(var(--bs-gutter-x) * 0.5);
+  }
+  #school-content .section-container .wrap-content .kategori-mobile .wrap-kategori-mobile {
+    overflow-x: auto;
+    white-space: nowrap;
+  }
+  #school-content .section-container .wrap-content .kategori-mobile .wrap-kategori-mobile .box {
+    display: ruby;
+    float: none;
+  }
+  #school-content .section-container .wrap-content .kategori-mobile .wrap-kategori-mobile .box a {
+    text-decoration: none;
+    cursor: pointer;
+  }
+  #school-content .section-container .wrap-content .kategori-mobile .wrap-kategori-mobile .box a .kategori {
+    font-size: 14px;
+    font-weight: 500;
+    background: #B4DBF5;
+    border-radius: 8px;
+    text-transform: uppercase;
+    color: #5180A2;
+    padding: 10px 10px;
+    margin: 10px 0;
+  }
+  #school-content .section-container .wrap-content .content .wrap .title {
+    background: #5180A2;
+    color: #FFF;
+    padding: 10px 10px;
+    margin: 10px 0;
+    border-radius: 8px;
+    text-transform: uppercase;
+  }
+  #school-content .section-container .wrap-content .content .wrap .slider-content-1 .swiper {
+    border-radius: 8px;
+    height: 322px;
+  }
+  #school-content .section-container .wrap-content .content .wrap .slider-content-1 .swiper .swiper-wrapper {
+    height: 361px;
+  }
+  #school-content .section-container .wrap-content .content .wrap .slider-content-1 .swiper .swiper-wrapper .swiper-slide img {
+    width: 100%;
+    object-fit: cover;
+    height: auto;
+  }
+  #school-content .section-container .wrap-content .content .wrap .slider-content-1 .swiper-pagination {
+    position: initial;
+    margin: 10px 0 30px 0;
+    height: 20px;
+    text-align: center;
+  }
+  #school-content .section-container .wrap-content .content .wrap .slider-content-1 .swiper-pagination-2 {
+    position: initial;
+    margin: 10px 0 30px 0;
+    height: 20px;
+    text-align: center;
+  }
+  #school-content .section-container .wrap-content .content .wrap .slider-content-1 .swiper-pagination-3 {
+    position: initial;
+    margin: 10px 0 30px 0;
+    height: 20px;
+    text-align: center;
+  }
+  #school-content .section-container .wrap-content .content .wrap .slider-content-1 .swiper-pagination-4 {
+    position: initial;
+    margin: 10px 0 30px 0;
+    height: 20px;
+    text-align: center;
+  }
+  #school-content .section-container .wrap-content .content .wrap .slider-content-1 .swiper-pagination-5 {
+    position: initial;
+    margin: 10px 0 30px 0;
+    height: 20px;
+    text-align: center;
+  }
+  #school-content .section-container .wrap-content .content .wrap .slider-content-1 .swiper-pagination-6 {
+    position: initial;
+    margin: 10px 0 30px 0;
+    height: 20px;
+    text-align: center;
+  }
+  #school-content .section-container .wrap-content .content .wrap .slider-content-1 .swiper-pagination-7 {
+    position: initial;
+    margin: 10px 0 30px 0;
+    height: 20px;
+    text-align: center;
+  }
+  #school-content .section-container .wrap-content .content .wrap .slider-content-1 .swiper-pagination-8 {
+    position: initial;
+    margin: 10px 0 30px 0;
+    height: 20px;
+    text-align: center;
   }
 }
